argocd/install/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
