argocd/install/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-https
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/part-of: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.git.open-ict.hu`)
      middlewares:
        - name: rfc1918-allowlist
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argo-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/part-of: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.git.open-ict.hu`)
      middlewares:
        - name: rfc1918-allowlist
        - name: https-redirect
      services:
        - name: argocd-server
          port: 80
